--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<h1>Mini gra QR - 9.0</h1>
+<h1>Mini gra QR - 9.1</h1>
 
 <div id="screen-init">
   <p>Zeskanowałeś kod startowy.</p>
@@ -52,6 +52,8 @@ let countdown = 5;
 let countdownInterval;
 let html5QrCode;
 
+let phase = "QUIZ";
+
 /* ===================== ELEMENTY ===================== */
 
 const startBtn = document.getElementById("startBtn");
@@ -67,7 +69,7 @@ const reader = document.getElementById("reader");
 
 function updateHistory() {
   const visibleHistory = previousTargets.slice(0, -1);
-  historyInfo.innerText = "Historia: " + previousTargets.join(" → ");
+  historyInfo.innerText = "Historia: " + visibleHistory.join(" → ");
 }
 
 /* ===================== LOSOWANIE KODU ===================== */
@@ -228,4 +230,5 @@ function evalSafe(a,op,b) {
 
 </body>
 </html>
+
 
