--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<h1>Mini gra QR - 9.1.3</h1>
+<h1>Mini gra QR - 9.1.4</h1>
 
 <div id="screen-init">
   <p>Zeskanowałeś kod startowy.</p>
@@ -51,6 +51,8 @@ let points = 0;
 let countdown = 5;
 let countdownInterval;
 let html5QrCode;
+
+let scanLocked = false;                                         //ZMIANA   <<----------
 
 let phase = "QUIZ";
 
@@ -124,6 +126,9 @@ function quizAnswer(answer, correct) {
 /* ===================== SKAN ===================== */
 
 function startScanPhase() {
+
+  scanLocked = false;                                     //ZMIANA   <<----------
+  
   gameState = "SCAN";
   quizBox.innerHTML = "";
   reader.style.display = "block";
@@ -141,6 +146,10 @@ function startScanPhase() {
 }
 
 function onScan(text) {
+
+   if (scanLocked) return;                                  //ZMIANA   <<----------
+    scanLocked = true;                                    //ZMIANA   <<----------
+  
   if(gameState !== "SCAN") return;
 
   const url = new URL(text, window.location.href);
@@ -152,6 +161,11 @@ function onScan(text) {
     pointsEl.innerText = points;
     status.innerText = "DOBRZE!";
 
+    if (html5QrCode) {                                       //ZMIANA   <<----------
+      html5QrCode.stop();                                 //ZMIANA   <<----------
+      html5QrCode = null;                                   //ZMIANA   <<----------
+}
+    
     if(points >= 5) {
       endGame("Wygrana! 5 punktów");
     } else {
@@ -238,6 +252,7 @@ function evalSafe(a,op,b) {
 
 </body>
 </html>
+
 
 
 
