--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<h1>Mini gra QR - 9.1.4</h1>
+<h1>Mini gra QR - 9.1.5</h1>
 
 <div id="screen-init">
   <p>Zeskanowałeś kod startowy.</p>
@@ -93,6 +93,8 @@ function generateQuiz() {
   quizBox.innerHTML = "";
   timerInfo.innerText = "";
 
+  let left, right;                                            //ZMIANA   <<----------
+  do {                                                        //ZMIANA   <<----------
   const a = rand();
   const b = rand();
   const c = rand();
@@ -101,10 +103,11 @@ function generateQuiz() {
   const op1 = randOp();
   const op2 = randOp();
 
-  const left = evalSafe(a, op1, b);
-  const right = evalSafe(c, op2, d);
+  left = evalSafe(a, op1, b);
+  right = evalSafe(c, op2, d);
+} while (left === right); // powtarzamy, aż będą różne              //ZMIANA   <<----------
 
-  const correct = left > right ? ">" : "<";
+const correct = left > right ? ">" : "<";
 
   quizBox.innerHTML = `
     <p class="big">${a} ${op1} ${b} ? ${c} ${op2} ${d}</p>
@@ -252,6 +255,7 @@ function evalSafe(a,op,b) {
 
 </body>
 </html>
+
 
 
 
