--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<h1>Mini gra QR - 9.1.5</h1>
+<h1>Mini gra QR - 9.1.6</h1>
 
 <div id="screen-init">
   <p>Zeskanowałeś kod startowy.</p>
@@ -51,8 +51,6 @@ let points = 0;
 let countdown = 5;
 let countdownInterval;
 let html5QrCode;
-
-//let scanLocked = false;                                         //ZMIANA   <<----------
 
 let phase = "QUIZ";
 
@@ -93,8 +91,6 @@ function generateQuiz() {
   quizBox.innerHTML = "";
   timerInfo.innerText = "";
 
-  //let left, right;                                            //ZMIANA   <<----------
- // do {                                                        //ZMIANA   <<----------
   const a = rand();
   const b = rand();
   const c = rand();
@@ -103,11 +99,10 @@ function generateQuiz() {
   const op1 = randOp();
   const op2 = randOp();
 
-  left = evalSafe(a, op1, b);
-  right = evalSafe(c, op2, d);
-//} while (left === right); // powtarzamy, aż będą różne              //ZMIANA   <<----------
+  const left = evalSafe(a, op1, b);
+  const right = evalSafe(c, op2, d);
 
-const correct = left > right ? ">" : "<";
+  const correct = left > right ? ">" : "<";
 
   quizBox.innerHTML = `
     <p class="big">${a} ${op1} ${b} ? ${c} ${op2} ${d}</p>
@@ -129,9 +124,6 @@ function quizAnswer(answer, correct) {
 /* ===================== SKAN ===================== */
 
 function startScanPhase() {
-
-//  scanLocked = false;                                     //ZMIANA   <<----------
-  
   gameState = "SCAN";
   quizBox.innerHTML = "";
   reader.style.display = "block";
@@ -149,10 +141,6 @@ function startScanPhase() {
 }
 
 function onScan(text) {
-
- //  if (scanLocked) return;                                  //ZMIANA   <<----------
- //   scanLocked = true;                                    //ZMIANA   <<----------
-  
   if(gameState !== "SCAN") return;
 
   const url = new URL(text, window.location.href);
@@ -164,11 +152,6 @@ function onScan(text) {
     pointsEl.innerText = points;
     status.innerText = "DOBRZE!";
 
-  //  if (html5QrCode) {                                       //ZMIANA   <<----------
-  //    html5QrCode.stop();                                 //ZMIANA   <<----------
-  //    html5QrCode = null;                                   //ZMIANA   <<----------
-}
-    
     if(points >= 5) {
       endGame("Wygrana! 5 punktów");
     } else {
@@ -255,6 +238,8 @@ function evalSafe(a,op,b) {
 
 </body>
 </html>
+
+
 
 
 
