--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<h1>Mini gra QR - 9.1.6</h1>
+<h1>Mini gra QR - 9.1.7</h1>
 
 <div id="screen-init">
   <p>Zeskanowałeś kod startowy.</p>
@@ -91,6 +91,9 @@ function generateQuiz() {
   quizBox.innerHTML = "";
   timerInfo.innerText = "";
 
+  let left, right;
+  do {
+  
   const a = rand();
   const b = rand();
   const c = rand();
@@ -101,7 +104,8 @@ function generateQuiz() {
 
   const left = evalSafe(a, op1, b);
   const right = evalSafe(c, op2, d);
-
+  } while (left === right); // powtarzamy, aż będą różne
+    
   const correct = left > right ? ">" : "<";
 
   quizBox.innerHTML = `
@@ -238,6 +242,7 @@ function evalSafe(a,op,b) {
 
 </body>
 </html>
+
 
 
 
